Update Source Build to 17
- Needed for Release Plugin
- Binaries still compile to 8