@@ -53,3 +53,7 @@ compileTestJava {
     }
 }
 
+test {
+    jvmArgs '--add-exports', 'java.naming/com.sun.jndi.ldap=ALL-UNNAMED'
+}
+
