@@ -24,3 +24,7 @@ compileTestJava {
         ]
     }
 }
+
+test {
+    jvmArgs '--add-exports', 'java.naming/com.sun.jndi.ldap=ALL-UNNAMED'
+}
